# pragmabackend

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  README.md  StaticHTTPPackets.cpp  StaticWSPackets.cpp  auth.json  db.cpp  docker-compose.yml  generateproto.bat  main.cpp  test1.json  vcpkg.json
.github/workflows/: build.yml  deploy.yml
Packets/Implementation/: AuthLatch.cpp  AuthenticateHandler.cpp  ConnectionManager.cpp  CreatePartyProcessor.cpp  EnterMatchmakingProcessor.cpp  GameDataStore.cpp  GetBulkProfileDataProcessor.cpp  GetFriendsListProcessor.cpp  GetIdentitiesProcessor.cpp  GetLoginDataProcessor.cpp  GetPlayerDataProcessor.cpp  GetUnreadMessagesProcessor.cpp  HealthCheckProcessor.cpp  LoginToChatProcessor.cpp  Notification.cpp  PartyDetailsNotification.cpp  PresenceUpdateNotification.cpp  ReadMessageProcessor.cpp  RegexPacketProcessorHTTP.cpp  RegexPayloadProcessorWS.cpp  SaveOutfitLoadoutProcessor.cpp  SavePlayerDataProcessor.cpp  SaveWeaponLoadoutProcessor.cpp  SetPresenceProcessor.cpp  SetReadyProcessor.cpp  SpectreWebsocket.cpp  SpectreWebsocketRequest.cpp  StaticResponseProcessor.cpp  StaticResponseProcessorHTTP.cpp  StaticResponseProcessorWS.cpp  SteamValidator.cpp  UpdateItemV4Processor.cpp  UpdateItemsV0Processor.cpp  UpdatePartyPlayerProcessor.cpp  UpdatePartyProcessor.cpp  VivoxTokenGenerator.cpp
Packets/Model/: AuthCfg.h  AuthLatch.h  AuthenticateHandler.h  CaseHelper.h  ConnectionManager.h  CreatePartyProcessor.h  EnterMatchmakingProcessor.h  FieldFetchProcessor.h  GameDataStore.h  GetBulkProfileDataProcessor.h  GetFriendsListProcessor.h  GetIdentitiesProcessor.h  GetLoginDataProcessor.h  GetPlayerDataProcessor.h  GetUnreadMessagesProcessor.h  HealthCheckProcessor.h  HeartbeatProcessor.h  LoginToChatProcessor.h  Notification.h  PacketProcessor.h  PartyDetailsNotification.h  PresenceUpdateNotification.h  ReadMessageProcessor.h  Regex.h  RegexPayloadProcessorHTTP.h  RegexPayloadProcessorWS.h  Registry.h  SaveOutfitLoadoutProcessor.h  SavePlayerDataProcessor.h  SaveWeaponLoadoutProcessor.h  SetPresenceProcessor.h  SetReadyProcessor.h  Site.h  SpectreRpcType.h  SpectreWebsocket.h  SpectreWebsocketRequest.h  StaticResponseProcessor.h  StaticResponseProcessorHTTP.h  StaticResponseProcessorWS.h  SteamValidator.h  (+5 more)
Packets/Protoc/: AuthMessages.proto  BulkProfileDataMessage.proto  CraftMessage.proto  CreatePartyRequest.proto  EnterMatchmakingRequest.proto  FriendsListResponse.proto  GetPlayerDataMessage.proto  GetPlayerIdentitiesRequest.proto  ItemUpdate.proto  LoginDataMessage.proto  PresenceUpdateNotificationContent.proto  ReadMessage.proto  SaveWeaponLoadoutMessage.proto  SetPresenceRequest.proto  SetReadyMessage.proto  UpdatePartyPlayerRequest.proto  UpdatePartyRequest.proto  UpdateSingleItemMessage.proto  UpdatesItemMessage.proto
Patcher/: BE_ClientDLL.cpp  CMakeLists.txt  RunSpectre.cpp  consolecmd.cpp  decrypt.cpp  dxgi.cpp  hooking.cpp  hookmain.cpp  lwshook.cpp  theiadumper.cpp
Patcher/headers/: consolecmd.h  decrypt.h  globals.h  hooking.h  lwshook.h
Persistence/Implementation/: Database.cpp  PartyDatabase.cpp  PlayerDatabase.cpp  PlayerDatabase_Providers.cpp
Persistence/Model/: Database.h  FieldKey.h  PartyDatabase.h  PlayerDatabase.h
Persistence/Protoc/: AlterationData.proto  ClientMessages.proto  CrossplayPreferences.proto  CustomGameInfo.proto  DisplayName.proto  FlatInstancedItem.proto  FriendsList.proto  InstancedItem.proto  Inventory.proto  LegacyPlayerData.proto  OutfitLoadout.proto  Party.proto  PartyMember.proto  PlayerData.proto  PlayerName.proto  PresenceState.proto  PresenceStatus.proto  ProfileData.proto  RGBAColor.proto  StackableItem.proto  TrackedProgression.proto  UpdatesItemMessage.proto  WeaponLoadout.proto
__fiddler_captures/: Spectre-09-19-2024-1ranked_04ea05c9-6692-46c8-adc9-d2a160871c2f.saz  readme.md  spectre-aug-17-2024-acouplematches_d10bb60d-13fb-41c3-b59a-12a6008e205c.saz  spectre-oct-1-2024-customgame_fe24fbad-05a6-4704-893a-5f63be09ef17.saz  spectre-season-1-2-25-2025-mainmenu-SantaiGG.saz  spectre-season-1-2-25-2025-mainmenu-limitedioaccount.saz
certs/: LocalDevCA.key  LocalDevCA.pem  LocalDevCA.srl  astro-dev.csr  san.cnf  server.crt  server.key
kotlinbackend/: build.gradle.kts  settings.gradle.kts
kotlinbackend/gradle/wrapper/: gradle-wrapper.properties
kotlinbackend/src/main/kotlin/app/: ConnectHandler.kt  FixedRegistry.kt  Main.kt  Routes.kt  RpcRegistry.kt  RpcWebSocket.kt  Service.kt
resources/payloads/static/game/v1/: info.json
resources/payloads/static/ws/game/: GameInstanceRpc.GetHostConnectionDetailsV1Response.json  MtnChatServiceRpc.LoginToChatV2Request.json  MtnConfigServiceRpc.GetConfigForClientV1Request.json  MtnCrewServiceRpc.GetCrewLobbyDataV1Request.json  MtnCrewServiceRpc.GetCrewServiceStatusV1Request.json  MtnCrewServiceRpc.GetNoneCrewMatchesPlayedCountV1Request.json  MtnInventoryServiceRpc.GetCraftingCatalogPlayerV1Request.json  MtnLoadoutServiceRpc.FetchPlayerOutfitLoadoutsV1Request.json  MtnLoadoutServiceRpc.FetchPlayerWeaponLoadoutsV1Request.json  MtnMatchHistoryServiceRpc.GetMatchHistoryByPlayerIdClientV1Request.json  MtnNewsServiceRpc.GetNewsPlayerV1Request.json  MultiplayerRpc.InitializePartyV1Request.json  PartyRpc.CreateV1Request.json  PartyRpc.UpdatePartyV1Request.json
resources/payloads/ws/game/: DefaultInventory.json  DefaultInventoryStore.json  DefaultInventory_min.json  DefaultLegacyData.json  DefaultLoginData.json  DefaultOutfitLoadout.json  DefaultPlayerData.json  DefaultProfile.json  DefaultWeaponLoadout.json
resources/payloads/ws/game/beacon/: hathora-udp.json
resources/payloads/ws/social/: DefaultFriendsList.json  DefaultPresenceStatus.json
responses/: auth.json  beaconendpoints.json  config.json  gateway.json  gateway_game.json  gateway_social.json  getfriendlistandregisteronline.json  getinqueuev1.json  healthcheck-status.json  healthcheck.json  info.json  inventory.json  logindata.json  playeridentitiesbyplatform.json  setsocialstatus.json  syncinventoryentitlements.json  types.json
(+15 files in other folders)
